--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Game Development">
+  <meta name="author" content="Bahadır Üçyıldız">
 
   <title>Bahadır Üçyıldız</title>
 
@@ -37,7 +37,7 @@
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav ml-auto">
         <li class="nav-item mx-0 mx-lg-1">
-            <a class="nav-link py-3 px-0 px-lg-3" href="blog-index.html"><i class="fas fa-bookmark fa-fw mr-2 "></i>Blog</a>
+            <a class="nav-link py-3 px-0 px-lg-3" href="blog-index.html"><i class="fas fa-bookmark fa-fw mr-2 "></i>Development Diaries</a>
         </li>
           <li class="nav-item mx-0 mx-lg-1">
             <a class="nav-link py-3 px-0 px-lg-3 rounded js-scroll-trigger" href="#portfolio">Projects</a>
