--- a/index.html
+++ b/index.html
@@ -570,7 +570,7 @@
                     <i class="fab fa-fw fa-github"></i>
                   </a>
 
-                  <a class="btn btn-outline-dark btn-social mx-1" href="https://www.youtube.com/watch?v=a6fEhdbtpB4">
+                  <a class="btn btn-outline-dark btn-social mx-1" href="https://youtu.be/t7TmiDfNPU8">
                     <i class="fab fa-fw fa-youtube"></i>
                   </a>
 
