--- a/virtualphotography.html
+++ b/virtualphotography.html
@@ -20,7 +20,7 @@
         <!-- Navigation-->
         <nav class="navbar navbar-expand-lg navbar-dark fixed-top" id="mainNav">
             <div class="container">
-                <a class="navbar-brand js-scroll-trigger" href="#page-top">Homepage</a>
+                <a class="navbar-brand js-scroll-trigger" href="https://solideizer.github.io./">Homepage</a>
                 <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
                     Menu
                     <i class="fas fa-bars ml-1"></i>
@@ -303,8 +303,11 @@
                                     <!-- Project Details Go Here-->
                                     <h2 class="text-uppercase">Red Dead Redemption 2</h2>
                                     <p class="item-intro text-muted">Open in new tab to see images in full size</p>
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/read-dead/0.jpg" alt="" />
+                                    <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/read-dead/1.jpg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/read-dead/0_01.jpg" alt="" />
                                     <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/read-dead/0_0 (3)1.jpg" alt="" />
+
                                     <button class="btn btn-primary" data-dismiss="modal" type="button">
                                         <i class="fas fa-times mr-1"></i>
                                         Close
