--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
             <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
               <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
             </div>
-            <img class="img-fluid" src="img/portfolio/neongelion.jpg" alt="" />
+            <img class="img-fluid" src="img/portfolio/typing.jpg" alt="" />
           </div>
         </div>
 
@@ -159,6 +159,16 @@
           </div>
         </div>
 
+
+        <!-- Portfolio Item 7-->
+        <div class="col-md-6 col-lg-4 mb-5 mb-md-0">
+          <div class="portfolio-item mx-auto" data-toggle="modal" data-target="#portfolioModal7">
+            <div class="portfolio-item-caption d-flex align-items-center justify-content-center h-100 w-100">
+              <div class="portfolio-item-caption-content text-center text-white"><i class="fas fa-plus fa-3x"></i></div>
+            </div>
+            <img class="img-fluid" src="img/portfolio/neongelion.jpg" alt="" />
+          </div>
+        </div>
 
 
       </div>
@@ -414,94 +424,60 @@
     </div>
   </div>
 
-  <!-- Portfolio Modal 2 -->
+
+
+
+  <!-- Portfolio Modal 2-->
   <div class="portfolio-modal modal fade" id="portfolioModal2" tabindex="-1" role="dialog"
-    aria-labelledby="portfolioModal2Label" aria-hidden="true">
-    <div class="modal-dialog modal-xl" role="document">
-      <div class="modal-content">
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">
-            <i class="fas fa-times"></i>
-          </span>
-        </button>
-        <div class="modal-body text-center">
-          <div class="container">
-            <div class="row justify-content-center">
-              <div class="col-lg-8">
-                <!-- Portfolio Modal - Title -->
-                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">
-                  Neongelion
-                </h2>
-                <!-- Icon Divider -->
-                <div class="divider-custom">
-                  <div class="divider-custom-line"></div>
-                  <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
-                  </div>
-                  <div class="divider-custom-line"></div>
+  aria-labelledby="portfolioModal2Label" aria-hidden="true">
+  <div class="modal-dialog modal-xl" role="document">
+    <div class="modal-content">
+      <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <span aria-hidden="true">
+          <i class="fas fa-times"></i>
+        </span>
+      </button>
+      <div class="modal-body text-center">
+        <div class="container">
+          <div class="row justify-content-center">
+            <div class="col-lg-8">
+
+              <!-- Portfolio Modal - Title -->
+              <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">
+                Typing Game
+              </h2>
+
+              <!-- Icon Divider -->
+              <div class="divider-custom">
+                <div class="divider-custom-line"></div>
+                <div class="divider-custom-icon">
+                  <i class="fas fa-star"></i>
                 </div>
+                <div class="divider-custom-line"></div>
+              </div>
 
-                <!-- Portfolio Modal - Text -->
-                <p class="mb-5">
-                  A cyberpunk themed first person shooter where the
-                  protagonist is trying to escape from the simulation which he
-                  lives in by using abilities such as slowing down the time
-                </p>
+              <div>
+                <img class="img-fluid rounded mb-5" src="img/portfolio/typing.jpg" alt="typingGame" />
+                Play on your browser !
+                <a class="btn btn-outline-dark btn-social mx-1" href="TypingGame/typingGame.html">
+                  <i class="fa fa-play"></i>
+                </a>
+              </div>
 
-                <div id="neongelion" class="carousel slide" data-ride="carousel">
-                  <!-- Indicators -->
-                  <ul class="carousel-indicators">
-                    <li data-target="#neongelion" data-slide-to="0" class="active"></li>
-                    <li data-target="#neongelion" data-slide-to="1"></li>
-                    <li data-target="#neongelion" data-slide-to="2"></li>
-                  </ul>
-
-                  <!-- The slideshow -->
-                  <div class="carousel-inner">
-                    <div class="carousel-item active">
-                      <img class="img-fluid rounded mb-5" src="img/portfolio/neon1.jpg" alt="Stargazer" width="1600"
-                        height="900" />
-                    </div>
-                    <div class="carousel-item">
-                      <img class="img-fluid rounded mb-5" src="img/portfolio/neon2.png" alt="Stargazer" width="1600"
-                        height="900" />
-                    </div>
-                    <div class="carousel-item">
-                      <img class="img-fluid rounded mb-5" src="img/portfolio/neon3.png" alt="Stargazer" width="1600"
-                        height="900" />
-                    </div>
-                  </div>
-
-                  <!-- Left and right controls -->
-                  <a class="carousel-control-prev" href="#neongelion" data-slide="prev">
-                    <span class="carousel-control-prev-icon"></span>
-                  </a>
-                  <a class="carousel-control-next" href="#neongelion" data-slide="next">
-                    <span class="carousel-control-next-icon"></span>
-                  </a>
-                </div>
-
-                <div>
-                  <p class="mb-5">
-                    Check it out on Github!
-                  </p>
-                  <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Solideizer/Neongelion">
-                    <i class="fab fa-fw fa-github"></i>
-                  </a>
-                </div>
-
-                <div class="divider-custom">
-                  <div class="divider-custom-line"></div>
-                  <div class="divider-custom-icon">
-                    <i class="fas fa-star"></i>
-                  </div>
-                  <div class="divider-custom-line"></div>
-                </div>
+  <!-- Icon Divider -->
+  <div class="divider-custom">
+    <div class="divider-custom-line"></div>
+    <div class="divider-custom-icon">
+      <i class="fas fa-star"></i>
+    </div>
+    <div class="divider-custom-line"></div>
+  </div>
 
                 <button class="btn btn-primary" href="#" data-dismiss="modal">
                   <i class="fas fa-times fa-fw"></i>
                   Close
                 </button>
+
               </div>
             </div>
           </div>
@@ -509,6 +485,10 @@
       </div>
     </div>
   </div>
+</div>
+
+
+
 
   <!-- Portfolio Modal 3 -->
   <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" role="dialog"
@@ -723,7 +703,7 @@
                   <ul class="carousel-indicators">
                     <li data-target="#battery" data-slide-to="0" class="active"></li>
                     <li data-target="#battery" data-slide-to="1"></li>
-                    <li data-target="#battery" data-slide-to="2"></li>                   
+                    <li data-target="#battery" data-slide-to="2"></li>
                   </ul>
 
                   <!-- The slideshow -->
@@ -736,7 +716,7 @@
                     </div>
                     <div class="carousel-item">
                       <img class="img-fluid rounded mb-5" src="img/portfolio/battery2.png" alt="Stargazer" />
-                    </div>                    
+                    </div>
                   </div>
 
 
@@ -808,14 +788,14 @@
               <div id="racing" class="carousel slide" data-ride="carousel">
                 <!-- Indicators -->
                 <ul class="carousel-indicators">
-                  <li data-target="#racing" data-slide-to="0" class="active"></li>                             
+                  <li data-target="#racing" data-slide-to="0" class="active"></li>
                 </ul>
 
                 <!-- The slideshow -->
                 <div class="carousel-inner">
                   <div class="carousel-item active">
                     <img class="img-fluid rounded mb-5" src="img/portfolio/racing.png" alt="Stargazer" />
-                  </div>                                  
+                  </div>
                 </div>
 
 
@@ -827,7 +807,6 @@
                     <i class="fab fa-fw fa-youtube"></i>
                   </a>
                 </div>
-
 
                 <!-- Icon Divider -->
                 <div class="divider-custom">
@@ -842,7 +821,7 @@
                   <i class="fas fa-times fa-fw"></i>
                   Close
                 </button>
-                
+
               </div>
             </div>
           </div>
@@ -852,6 +831,101 @@
   </div>
 </div>
 
+<!-- Portfolio Modal 7 -->
+<div class="portfolio-modal modal fade" id="portfolioModal7" tabindex="-1" role="dialog"
+aria-labelledby="portfolioModal7Label" aria-hidden="true">
+<div class="modal-dialog modal-xl" role="document">
+  <div class="modal-content">
+    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+      <span aria-hidden="true">
+        <i class="fas fa-times"></i>
+      </span>
+    </button>
+    <div class="modal-body text-center">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8">
+            <!-- Portfolio Modal - Title -->
+            <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0">
+              Neongelion
+            </h2>
+            <!-- Icon Divider -->
+            <div class="divider-custom">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon">
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="divider-custom-line"></div>
+            </div>
+
+            <!-- Portfolio Modal - Text -->
+            <p class="mb-5">
+              A cyberpunk themed first person shooter where the
+              protagonist is trying to escape from the simulation which he
+              lives in by using abilities such as slowing down the time
+            </p>
+
+            <div id="neongelion" class="carousel slide" data-ride="carousel">
+              <!-- Indicators -->
+              <ul class="carousel-indicators">
+                <li data-target="#neongelion" data-slide-to="0" class="active"></li>
+                <li data-target="#neongelion" data-slide-to="1"></li>
+                <li data-target="#neongelion" data-slide-to="2"></li>
+              </ul>
+
+              <!-- The slideshow -->
+              <div class="carousel-inner">
+                <div class="carousel-item active">
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/neon1.jpg" alt="Stargazer" width="1600"
+                    height="900" />
+                </div>
+                <div class="carousel-item">
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/neon2.png" alt="Stargazer" width="1600"
+                    height="900" />
+                </div>
+                <div class="carousel-item">
+                  <img class="img-fluid rounded mb-5" src="img/portfolio/neon3.png" alt="Stargazer" width="1600"
+                    height="900" />
+                </div>
+              </div>
+
+              <!-- Left and right controls -->
+              <a class="carousel-control-prev" href="#neongelion" data-slide="prev">
+                <span class="carousel-control-prev-icon"></span>
+              </a>
+              <a class="carousel-control-next" href="#neongelion" data-slide="next">
+                <span class="carousel-control-next-icon"></span>
+              </a>
+            </div>
+
+            <div>
+              <p class="mb-5">
+                Check it out on Github!
+              </p>
+              <a class="btn btn-outline-dark btn-social mx-1" href="https://github.com/Solideizer/Neongelion">
+                <i class="fab fa-fw fa-github"></i>
+              </a>
+            </div>
+
+            <div class="divider-custom">
+              <div class="divider-custom-line"></div>
+              <div class="divider-custom-icon">
+                <i class="fas fa-star"></i>
+              </div>
+              <div class="divider-custom-line"></div>
+            </div>
+
+            <button class="btn btn-primary" href="#" data-dismiss="modal">
+              <i class="fas fa-times fa-fw"></i>
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 
 
 
