--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
       <img class="masthead-avatar mb-5" src="img/2.png" alt="" />
 
       <!-- Masthead Heading -->
-      <h1 class="masthead-heading text-uppercase mb-0">B.Bahadır Üçyıldız</h1>
+      <h1 class="masthead-heading text-uppercase mb-0">Bahadır Üçyıldız</h1>
 
       <!-- Icon Divider -->
       <div class="divider-custom divider-light">
@@ -74,8 +74,7 @@
 
       <!-- Masthead Subheading -->
       <p class="masthead-subheading font-weight-light mb-0">
-        Computer Engineering Undergraduate @ Istanbul University // Game
-        Developer
+        Game Developer
       </p>
     </div>
   </header>
@@ -196,15 +195,15 @@
       <div class="row">
         <div class="col-lg-4 ml-auto">
           <p class="lead">
-            I'm currently pursuing my Computer Engineering Bachelors Degree at
-            Istanbul University while developing passion projects in Unity.
+            I have graduated from Istanbul University with a Bachelor’s Degree in Computer Engineering. I'm currently
+            working as a Game Developer.
           </p>
         </div>
         <div class="col-lg-4 mr-auto">
           <p class="lead">
-            I'm experimenting with systems such as Procedural Generation and
-            Ragdoll Physics in my on-going Unity projects to create immersive
-            and unique gameplay experiences.
+            I’m increasing my knowledge regarding software architecture design, SOLID design principles, C# coding
+            standarts/naming conventions and varied design patterns in order to improve my ability to write better
+            designed and optimized code.
           </p>
         </div>
       </div>
@@ -312,7 +311,7 @@
   <!-- Copyright Section -->
   <section class="copyright py-4 text-center text-white">
     <div class="container">
-      <small>Copyright &copy; Bahadır Üçyıldız @ 2020 </small>
+      <small>Copyright &copy; Bahadır Üçyıldız @ 2021 </small>
     </div>
   </section>
 
@@ -927,11 +926,6 @@
     </div>
   </div>
 
-
-
-
-
-
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
@@ -945,6 +939,9 @@
 
   <!-- Custom scripts for this template -->
   <script src="js/freelancer.min.js"></script>
+
+  <!-- Style Switcher -->
+  <script src="assets/js/demo/style-switcher.js"></script>
 </body>
 
 </html>
