--- a/virtualphotography.html
+++ b/virtualphotography.html
@@ -125,20 +125,20 @@
                         </div>
                     </div>
                 </div>
-                <!-- <div class="col-lg-4 col-sm-6">
-                        <div class="portfolio-item">
-                            <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
-                                <div class="portfolio-hover">
-                                    <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
-                                </div>
-                                <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
-                            </a>
-                            <div class="portfolio-caption">
-                                <div class="portfolio-caption-heading">Window</div>
-                                <div class="portfolio-caption-subheading text-muted">Photography</div>
+                <div class="col-lg-4 col-sm-6">
+                    <div class="portfolio-item">
+                        <a class="portfolio-link" data-toggle="modal" href="#portfolioModal6">
+                            <div class="portfolio-hover">
+                                <div class="portfolio-hover-content"><i class="fas fa-plus fa-3x"></i></div>
                             </div>
+                            <img class="img-fluid" src="assets/img/portfolio/06-thumbnail.jpg" alt="" />
+                        </a>
+                        <div class="portfolio-caption">
+                            <div class="portfolio-caption-heading">AC Origins</div>
+                            <div class="portfolio-caption-subheading text-muted">Land of Pharaohs</div>
                         </div>
-                    </div> -->
+                    </div>
+                </div>
             </div>
         </div>
     </section>
@@ -355,6 +355,35 @@
                                 <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/read-dead/0_0 (3)1.jpg"
                                     alt="" />
 
+                                <button class="btn btn-primary" data-dismiss="modal" type="button">
+                                    <i class="fas fa-times mr-1"></i>
+                                    Close
+                                </button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div> <!-- Modal 6-->
+    <div class="portfolio-modal modal fade" id="portfolioModal6" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="close-modal" data-dismiss="modal"><img src="assets/img/close-icon.svg" alt="Close modal" />
+                </div>
+                <div class="container">
+                    <div class="row justify-content-center">
+                        <div class="col-lg-8">
+                            <div class="modal-body">
+                                <!-- Project Details Go Here-->
+                                <h2 class="text-uppercase">AC Origins</h2>
+                                <p class="item-intro text-muted">Open in new tab to see images in full size</p>
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/ac origins/1.jpg"
+                                    alt="" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/ac origins/2.jpg"
+                                    alt="" />
+                                <img class="img-fluid d-block mx-auto" src="assets/img/portfolio/ac origins/3.jpg"
+                                    alt="" />
                                 <button class="btn btn-primary" data-dismiss="modal" type="button">
                                     <i class="fas fa-times mr-1"></i>
                                     Close
